# pandragon

./: .clangd  .gitignore  .gitmodules  How2Config.txt  LICENSE  Makefile  README.txt  commit-history.txt  docker-compose.yml
Beacon/config/: default.json  schema.json
Beacon/core/: config.cpp  config_parser.cpp  etw_bypass.cpp  handlers.cpp  injection.cpp  main.cpp  pandragon_runtime.cpp  resolver.cpp  sandbox.cpp  sleep_morpheus.cpp  sleep_obf.cpp  sleep_utils.cpp  syscalls.cpp  unhook.cpp  utils.cpp
Beacon/include/: config_parser.h  etw_bypass.h  handlers.h  injection.h  managers.h  pandragon_runtime.h  resolver.h  sandbox.h  sleep_obf.h  sleep_utils.h  syscalls.h  unhook.h  utils.h
Beacon/libs/: managers.cpp
Beacon/test/: Makefile  minunit.h  test_base64.cpp  test_bof_cache.cpp  test_cookie.cpp  test_net_crypto.cpp  test_pkcs7.cpp  test_sleep_utils.cpp  test_stubs.cpp
BofDev/: Makefile  async_bof_test.c  bofdefs.h  file_download.c  file_read.c  file_write.c  list_files.c  listprocs.c  reverse_shell.c  shellcode.c  shellcode_loader.c  spawnexplorer.c
config/: schema.json
docs/: BOF_DEV_GUIDE.md  protocol-pandragon-c2.md
docs/spec/: pandragon-operator-guide.md  protocol-pandragon-c2.md  smb_relay_p2pdraft.md
server/: Makefile  __init__.py  config.json  config_schema.json  known_beacons.json  rebuild.sh  requirements.txt  run.py  setup.py
server/core/: config.py  (+2 more)
tools/: append_data.py  check_debug_config.py  config_builder.py  config_check.py  config_decrypt.py  pyproject.toml
tools/src/pandragon_config_builder/: __init__.py  builder.py  checker.py
(+69 files in other folders)
